--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,28 @@ colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
 conda==4.12.0
 conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
 conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1649105784853/work
+contourpy==1.3.0
 cryptography @ file:///tmp/build/80754af9/cryptography_1639414572950/work
+cycler==0.12.1
 exceptiongroup==1.3.0
+fonttools==4.60.1
 idna @ file:///tmp/build/80754af9/idna_1637925883363/work
+importlib_resources==6.5.2
 iniconfig==2.1.0
+kiwisolver==1.4.7
+matplotlib==3.9.4
+numpy==2.0.2
 packaging==25.0
+pillow==11.3.0
 pluggy==1.6.0
 pycosat==0.6.3
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 Pygments==2.19.2
 pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+pyparsing==3.2.5
 PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
 pytest==8.4.2
+python-dateutil==2.9.0.post0
 requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
 ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016711199/work
 ruff==0.14.2
@@ -26,3 +36,4 @@ tomli==2.3.0
 tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
 typing_extensions==4.15.0
 urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
+zipp==3.23.0
