--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ conda==4.12.0
 conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
 conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1649105784853/work
 contourpy==1.3.0
+coverage==7.10.7
 cryptography @ file:///tmp/build/80754af9/cryptography_1639414572950/work
 cycler==0.12.1
 exceptiongroup==1.3.0
@@ -27,6 +28,7 @@ pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
 pyparsing==3.2.5
 PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
 pytest==8.4.2
+pytest-cov==7.0.0
 python-dateutil==2.9.0.post0
 requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
 ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016711199/work
